@@ -210,6 +210,9 @@
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                            --add-opens java.base/java.io=ALL-UNNAMED
+                            -XX:+EnableDynamicAgentLoading
                         </argLine>
                     </configuration>
                 </plugin>
